[package]
name = "keysync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
evdev = "0.13"  # For keyboard event monitoring
rand = "0.9.1"
rmp = "0.8"
hostname = "0.4"
regex = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-hjson = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = "0.3"

[dev-dependencies]
regex = "1"

[target.aarch64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

