[package]
name = "keysync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
evdev = "0.13"  # For keyboard event monitoring
rand = "0.9"
hostname = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
bitcode = { version = "0.6", features = ["serde"] }
serde_norway = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[target.aarch64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

